--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://192.168.56.11:5433/admin
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+test.point=test
