--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 ##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://192.168.56.11:5433/admin
+spring.datasource.url=jdbc:postgresql://192.168.56.11:5433/test
 spring.datasource.username=admin
 spring.datasource.password=admin
 
